Correction alignement header collapse

--- a/src/components/Collapse/_collapse.scss
+++ b/src/components/Collapse/_collapse.scss
@@ -19,7 +19,7 @@
         justify-content: space-between;
         align-items: center;
         box-sizing: border-box;
-        padding: 25px 20px 20px 15px;
+        padding: 20px;
         border-radius: 5px;
         background: $primarycolor;
         color: $secondarycolor;
